--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  img(src="./images/snakesandladdersboard.jpg", alt="Snakes and ladders game board")
